[project]
name = "learn-pinecone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.11.0",
    "sentence-transformers>=5.5.1",
]
